<resources>
    <string name="app_name">ParentApp</string>
    <string name="login">Login\n</string>
    <string name="keep_track_of_your_child">slogan\n</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="Name">CName</string>
    <string name="i_am_here">I AM HERE</string>
    <string name="logo">Logo</string>
    <string name="top_view">Top View</string>
    <string name="keep_track_your_child">Keep Track Your Child</string>
    <string name="forgot_password">Forgot Password\n</string>
    <string name="password">Password\n</string>
    <string name="e_mail">E-Mail\n</string>
    <string name="profile">Profile\n</string>
    <string name="scan_qr_code">Scan QR\n</string>
    <string name="re_print_qr">Re-Print QR</string>
    <string name="report_issue">Report Absence</string>
    <string name="notifications">Notifications</string>
    <string name="username">Username\n</string>
    <string name="move">Move</string>
    <string name="menu">Menu</string>
    <string name="dashboard">Dashboard</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="route">Route</string>
    <string name="view_routes">View Route</string>
    <string name="re_print_qr_code">Re-Print QR Code</string>
    <string name="or">OR\n</string>
    <string name="mark_student">Mark Child</string>
    <string name="student_number">Student Number</string>
    <string name="enter_student_number">Enter Student Number</string>
    <string name="attendance">Attendance</string>
    <string name="view_attendance">View Attendance</string>
    <string name="send_notification">Send Notification</string>
    <string name="other_issues_optional">Other Additional Issues (Optional)</string>
    <string name="select_issue">Select Issue</string>
    <string name="maintenance_day_tomorrow">Maintance Day</string>
    <string name="posted_by_admin">Posted By: Admin\n</string>
    <string name="_23_sept_2024_10_15_am">23_sept_2024_10_15_am</string>
    <string name="school_will_be_closed_tomorrow_for_maintenance_please_plan_accordingly">school_will_be_closed_tomorrow_for_maintenance_please_plan_accordingly</string>
    <string name="bus_delay_due_to_traffic">bus_delay_due_to_traffic</string>
    <string name="posted_by_bus_driver">Posted By: bus_driver</string>
    <string name="_23_sept_2024_09_00_am">23_sept_2024_09_00_am</string>
    <string name="the_bus_will_arrive_10_minutes_later_than_usual_due_to_heavy_traffic">The Bus will Arrive late than usual due to heavy Traffic\n</string>
    <string name="medical_form_submission">Medical Form Submission</string>
    <string name="posted_by_school_authority">Posted By: School Authority</string>
    <string name="_22_sept_2024_04_00_pm">22_sept_2024_04_00_pm</string>
    <string name="all_students_must_submit_their_updated_medical_forms_by_next_week">All students must submit their updated medical forms by next week</string>
    <string name="save_qr_to_phone">Save QR to Phone</string>
    <string name="qr_code_for_student">QR Code for Student</string>
    <string name="reprint_qr">Reprint QR</string>
    <string name="enter_student_id">Enter Student ID</string>
</resources>