<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:padding="20dp"
    android:background="#FFC107"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/l"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/wel_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/welcome_back"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/username"
        android:textSize="25sp"
        android:textStyle="italic"
        android:textAlignment="center"/>



</LinearLayout>