<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".Notification"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        tools:ignore="VisualLintBounds" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- Top View -->
        <View
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bg_view" />

        <ImageView
            android:id="@+id/Menu"
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/menu"
            android:src="@drawable/baseline_menu_24"
            android:layout_gravity="start"/>

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="200dp"
            android:layout_height="130dp"
            android:layout_marginTop="25sp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo"
            android:src="@drawable/l"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/notifications_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Logo"
            android:layout_marginBottom="5dp"
            android:text="@string/notifications"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:layout_marginHorizontal="80dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_centerHorizontal="true"/>

        <!-- ScrollView for Blog-like Notification List -->
        <ScrollView
            android:id="@+id/notification_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/top_view">

            <!-- LinearLayout containing the notifications -->
            <LinearLayout
                android:id="@+id/notification_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <!-- Example Notification Card 1 (Latest First) -->


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="8dp"
                    android:layout_marginBottom="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Notification Title -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/maintenance_day_tomorrow"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/black" />

                        <!-- Who Posted the Notification (Admin, Driver, etc.) -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/posted_by_admin"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:layout_marginTop="4dp" />

                        <!-- Date and Time of the Notification -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_23_sept_2024_10_15_am"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:layout_marginTop="4dp" />

                        <!-- Notification Content -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/school_will_be_closed_tomorrow_for_maintenance_please_plan_accordingly"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:layout_marginTop="8dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Example Notification Card 2 (Older) -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="8dp"
                    android:layout_marginBottom="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Notification Title -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bus_delay_due_to_traffic"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/black" />

                        <!-- Who Posted the Notification (Bus Driver) -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/posted_by_bus_driver"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:layout_marginTop="4dp" />

                        <!-- Date and Time of the Notification -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_23_sept_2024_09_00_am"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:layout_marginTop="4dp" />

                        <!-- Notification Content -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/the_bus_will_arrive_10_minutes_later_than_usual_due_to_heavy_traffic"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:layout_marginTop="8dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Example Notification Card 3 (Even Older) -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="8dp"
                    android:layout_marginBottom="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Notification Title -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/medical_form_submission"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="@color/black" />

                        <!-- Who Posted the Notification (School Authority) -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/posted_by_school_authority"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:layout_marginTop="4dp" />

                        <!-- Date and Time of the Notification -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_22_sept_2024_04_00_pm"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:layout_marginTop="4dp" />

                        <!-- Notification Content -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/all_students_must_submit_their_updated_medical_forms_by_next_week"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:layout_marginTop="8dp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Add more notification cards here as needed -->
            </LinearLayout>
        </ScrollView>




    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>
