<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="850dp"
        android:background="@drawable/bg_view"
        tools:ignore="MissingConstraints,VisualLintBounds" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/Logo"
                android:layout_width="400dp"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/l"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/Welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <ImageView
                android:id="@+id/profile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_person_24"
                android:contentDescription="@string/profile"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="29sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginStart="30dp"/>

            <EditText
                android:id="@+id/Enter_Email"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:autofillHints="Password"
                android:hint="@string/e_mail"
                android:textColorHint="@color/black"
                android:padding="8dp"
                android:drawablePadding="16dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/baseline_email_24"
                android:layout_marginTop="32dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edittext_background"
                android:layout_gravity="center"
                />

            <EditText
                android:id="@+id/Enter_Password"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                android:padding="8dp"
                android:drawablePadding="16dp"
                android:ems="10"
                android:inputType="textPassword"
                android:drawableStart="@drawable/baseline_lock_open_24"
                android:layout_marginTop="32dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/edittext_background"
                android:autofillHints="Password"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/btnlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/login"
                app:srcCompat="@drawable/btn_login"
                tools:ignore="ImageContrastCheck" />


            <TextView
                android:id="@+id/admin_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textStyle="italic"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="@+id/button"
                app:layout_constraintStart_toStartOf="@+id/button"
                app:layout_constraintTop_toBottomOf="@+id/button" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>