<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".ScanActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        tools:ignore="VisualLintBounds" />




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <!-- Top View -->
        <View
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/bg_view"
            android:layout_marginTop="2sp"/>

        <ImageView
            android:id="@+id/Menu"
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:layout_gravity="start"
            android:layout_marginTop="25sp"
            android:contentDescription="@string/menu"
            android:src="@drawable/baseline_menu_24"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo"
            android:src="@drawable/l"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_qr_code"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="5sp"
            android:layout_gravity="center"
            android:layout_below="@+id/Logo"
            android:layout_centerHorizontal="true"/>
        <!-- ScrollView for the content -->
        <ScrollView
            android:id="@+id/scroller"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_below="@id/top_view"
            android:layout_margin="16dp"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <!-- Title Text -->

                <!-- Student Number Entry -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_student_number"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="24dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/student_number_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Student_Number"
                    android:hint="@string/student_number"
                    android:inputType="number"
                    android:padding="16dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_background"
                    android:textColor="@color/black"
                    android:textStyle="italic"/>
                <Button
                    android:id="@+id/mark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mark_student"
                    android:backgroundTint="@color/black"
                    android:textColor="#FFEB3B"
                    android:layout_marginTop="2sp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textSize="45sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="10sp"
                    android:textStyle="bold"/>

                <!-- QR Scan Button with ImageView -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="5sp"
                    tools:ignore="UseCompoundDrawables">

                    <!-- QR Scan Icon -->
                    <ImageView
                        android:id="@+id/qr_scan"
                        android:layout_width="200dp"
                        android:layout_height="150dp"
                        android:src="@drawable/baseline_qr_code_scanner_24"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/scan_qr" />

                    <!-- Scan QR Text -->
                    <TextView
                        android:id="@+id/scan_qr_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/scan_qr_code"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp" />
                </LinearLayout>

                <!-- Back Button to Menu -->


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>
